--- a/2023/Makefile
+++ b/2023/Makefile
@@ -1,11 +1,12 @@
 CFLAGS=-Wall -g3 -I../
+LDLIBS=-lm
 SRCS=$(wildcard *.c)
 BINS=$(SRCS:%.c=%)
 
 all: $(BINS)
 
 %: %.c
-	$(CC) $(CFLAGS) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $< $(LDLIBS)
 
 clean:
 	rm $(BINS)
