cleaning up from last year

--- a/2024/Makefile
+++ b/2024/Makefile
@@ -1,3 +1,4 @@
+LDLIBS=-lm
 CFLAGS=-Wall -g3 -I../
 SRCS=$(wildcard *.c)
 BINS=$(SRCS:%.c=%)
@@ -5,7 +6,7 @@ BINS=$(SRCS:%.c=%)
 all: $(BINS)
 
 %: %.c
-	$(CC) $(CFLAGS) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $< $(LDLIBS)
 
 clean:
 	rm $(BINS)
